feat: バックエンドをworkspaceに対応

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,42 +1,6 @@
-# Dependencies
-node_modules
+# このファイルはルートの.dockerignoreで管理されています
+# backend固有の除外パターンがあればここに追加してください
 
-# Build outputs
-dist
-
-# Logs
-*.log
-npm-debug.log
-
-# Testing
-coverage
-
-# IDE
-.idea
-.vscode
-
-# OS
-.DS_Store
-tmp
-
-# Git
-.git
-.gitignore
-
-# Environment variables
-.env
-.env.*
-.env.local
-.env.development
-.env.test
-.env.production
-.env.staging
-
-# Lock files (except pnpm-lock.yaml which is needed for Docker build)
-yarn.lock
-
-# Dev container config
-.devcontainer
-
-# Other
-.npmrc
+# Development files
+src/**/*.spec.ts
+test/
