--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
-	"files": [],
-	"references": [
-		{ "path": "./frontend/tsconfig.json" },
-		{ "path": "./backend/tsconfig.json" }
-	]
+  "files": [],
+  "references": [
+    { "path": "./shared/tsconfig.json" },
+    { "path": "./frontend/tsconfig.json" },
+    { "path": "./backend/tsconfig.json" }
+  ]
 }
