feat: pnpm-workspace.yamlのパッケージリストを更新し、ignoredBuiltDependenciesを追加

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,9 @@
 packages:
-  - "backend"
-  - "frontend"
-  - "shared"
+  - backend
+  - frontend
+  - shared
+
+ignoredBuiltDependencies:
+  - '@nestjs/core'
+  - esbuild
+  - unrs-resolver
