--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,14 +1,13 @@
-FROM mcr.microsoft.com/devcontainers/typescript-node:24
+FROM node:22-alpine
 
 WORKDIR /workspace
 
-# pnpm workspace設定とpackage.jsonをコピー
-COPY pnpm-lock.yaml package.json pnpm-workspace.yaml ./
-COPY backend/package.json ./backend/
-COPY frontend/package.json ./frontend/
-COPY shared/package.json ./shared/
+RUN apk add --no-cache \
+    ca-certificates \
+    curl \
+    git \
+    make
 
-# pnpmを有効化してworkspace全体の依存関係をインストール
-RUN corepack enable && corepack prepare pnpm@latest --activate && pnpm install --frozen-lockfile
+RUN corepack enable && corepack prepare pnpm@latest --activate
 
 EXPOSE 5173
