feat: 各パッケージの依存関係を更新し、devスクリプトを改善

--- a/package.json
+++ b/package.json
@@ -4,10 +4,19 @@
   "description": "Todo App with Node.js",
   "private": true,
   "scripts": {
-    "dev": "pnpm --filter=backend start:dev & pnpm --filter=frontend dev",
+    "dev": "pnpm --filter=shared dev & pnpm --filter=backend start:dev & pnpm --filter=frontend dev",
     "build": "pnpm --filter=shared build && pnpm --filter=backend build && pnpm --filter=frontend build",
     "lint": "pnpm --filter=backend lint && pnpm --filter=frontend lint",
     "test": "pnpm --filter=backend test"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@eslint/js": "^9.18.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.2",
+    "globals": "^16.0.0",
+    "prettier": "^3.4.2",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.20.0"
+  }
 }
