--- a/shared/package.json
+++ b/shared/package.json
@@ -9,7 +9,5 @@
     "build": "tsc",
     "dev": "tsc --watch"
   },
-  "devDependencies": {
-    "typescript": "~5.9.3"
-  }
+  "devDependencies": {}
 }
