feat: pnpm-workspace.yamlにonlyBuiltDependenciesとpackageImportMethodを追加

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,3 +7,9 @@ ignoredBuiltDependencies:
   - '@nestjs/core'
   - esbuild
   - unrs-resolver
+
+onlyBuiltDependencies:
+  - '@prisma/engines'
+  - prisma
+
+packageImportMethod: copy
