--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,5 @@ store-dir=.pnpm-store
 virtual-store-dir=node_modules/.pnpm
 shamefully-hoist=false
 strict-peer-dependencies=true
+enable-pre-post-scripts=true
+package-import-method=copy
