--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,6 @@
 # compiled output
 dist
+generated
 
 # Logs
 # Logs
@@ -53,3 +54,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+/generated/prisma
