--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,6 @@
 # compiled output
 dist
-generated
+src/generated
 
 # Logs
 # Logs
@@ -42,6 +42,11 @@ lerna-debug.log*
 .env.production.local
 .env.local
 
+# Prisma
+# Keep migrations in VCS, ignore generated client output
+!prisma/migrations/
+prisma/generated/
+
 # temp directory
 .temp
 .tmp
@@ -54,5 +59,3 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-/generated/prisma
