--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -4,6 +4,5 @@
   "semi": true,
   "tabWidth": 2,
   "printWidth": 100,
-  "endOfLine": "auto",
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "endOfLine": "auto"
 }
