--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.20.0"
   },
