feat: tailwindcssの設定の追加

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,12 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.18",
-    "clsx": "^2.1.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
     "react-router-dom": "^7.12.0",
     "shared": "workspace:*",
-    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "zod": "^4.3.5"
   },
   "devDependencies": {
