feat: localhost:8000を追加

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,10 +4,10 @@ services:
       context: .
       dockerfile: ./frontend/Dockerfile.dev
     environment:
-      VITE_API_URL: http://backend:8000
-      CHOKIDAR_USEPOLLING: "1"
+      VITE_API_URL: http://localhost:8000
+      CHOKIDAR_USEPOLLING: '1'
     ports:
-      - "5173:5173"
+      - '5173:5173'
     volumes:
       - type: bind
         source: ./
@@ -38,9 +38,9 @@ services:
       dockerfile: ./backend/Dockerfile.dev
     environment:
       DATABASE_URL: postgres://user:password@db:5432/app_db
-      CHOKIDAR_USEPOLLING: "1"
+      CHOKIDAR_USEPOLLING: '1'
     ports:
-      - "8000:8000"
+      - '8000:8000'
     volumes:
       - type: bind
         source: .
@@ -73,7 +73,7 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: app_db
     ports:
-      - "5432:5432"
+      - '5432:5432'
     volumes:
       - type: volume
         source: postgres_data
@@ -81,11 +81,7 @@ services:
         volume:
           nocopy: true
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} || exit 1",
-        ]
+      test: ['CMD-SHELL', 'pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB} || exit 1']
       interval: 10s
       timeout: 10s
       retries: 5
